# Parking-Tracker-UNT

./: CMakeLists.txt  CarProfile.cpp  CarProfile.h  License.cpp  License.h  README.md  UNTParking.pro  UNTParking.pro.qtds  UserProfile.cpp  UserProfile.h  WebSocketServer.h  databasemanager.cpp  databasemanager.h  dialog.cpp  dialog.h  dialog.ui  loginpage.cpp  loginpage.h  loginpage.ui  logo.qrc  lot.cpp  lot.h  lotmanager.cpp  lotmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapmaker  parkingdialog.cpp  parkingdialog.h  parkingdialog.ui  parkinglotwidget.cpp  parkinglotwidget.h  parkingspot.cpp  parkingspot.h  permitpage.cpp  permitpage.h  permitpage.ui  seconddialog.cpp  (+6 more)
